--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,16 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: {
+  username: "TestUserOne",
+  email: "TestUserOne@TestUserOne.com",
+  bio: "I am test user one"
+}
 # column: value
 #
-two: {}
+two: {
+  username: "TestUserTwo",
+  email: "TestUserTwo@TestUserTwo.com",
+  bio: "I am test user Two"
+}
 # column: value
